<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBackground"
        android:theme="@style/SplashTheme"
        tools:context=".ui.login.LoginFragment">

        <TextView
            android:id="@+id/tv_associate_pron"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nokora_bold_700"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/splash_title"
            android:textColor="#473E6A"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_associate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nokora_regular_400"
            android:gravity="center"
            android:text="@string/splash_subtitle"
            android:textColor="#4D473E6A"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space" />

        <Button
            android:id="@+id/btn_google_sig_in"
            android:layout_width="256dp"
            android:layout_height="64dp"
            style="@style/Style_Btn_Main"
            android:background="@drawable/btn_main_sharpe"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/btn_text_google_sig_in"
            android:drawableEnd="@drawable/ic_arrow_white_r"
            android:paddingEnd="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>